People manager: fixed group dropdown not showing

--- a/src/css/boom/people-manager/people-manager.less
+++ b/src/css/boom/people-manager/people-manager.less
@@ -161,8 +161,12 @@
 				left: -10000%;
 			}
 
-			&.groups ul span {
-				position: static;
+			&.groups {
+				overflow: visible;
+
+				ul span {
+					position: static;
+				}
 			}
 		}
 
